@startuml
title Lade Spiel... - Zustandsdiagramm
hide empty description

[*] --> EntryGeladen
state EntryGeladen : HTML Entry geladen: _ghtml_leasing_gutachter.html
EntryGeladen --> RedirectVorbereiten : enginePath/configPath auslesen
RedirectVorbereiten --> RedirectAusfuehren : window.location.replace/assign
RedirectAusfuehren --> EngineLaden : Zielseite aufrufen
EngineLaden --> DatenLaden : Engine-/Config-Daten laden
DatenLaden --> SpielBereit : Initialisierung abgeschlossen
DatenLaden --> Fehler : Daten nicht ladbar
SpielBereit --> [*] : Steuerung an Ziel-Engine
Fehler --> [*]

note right of RedirectVorbereiten
Quelle: databases/Teil01 Grundlagen/database/BWL/Auswahl & Bewertung/Leasing/leasing_gutachter/_ghtml_leasing_gutachter.html
enginePath: ../../../../../../../game_pages/DecisionGame/index.html
configPath: _data/_gg01_leasing_gutachter.json
end note
@enduml
